@@ -6,12 +6,17 @@ DescTools 0.99.40 (2021-03-06)
 NEW FUNCTIONS ADDED:
   * StrExtractBetween() returns the part of a string bounded by the expression 
     "left" on the left side and "right" on the right side.
+  * Some new tests have been added. We will continuously add more 
+    in the near future. 
 
 UPDATED FUNCTIONS:
   * PasswordDlg() allows to add a checkbox option.
+  * BinomRatCI() has undergone some streamlining concerning input and output.
+  * AllIdentical() has been rewritten to be 4 times faster.
   
 BUGFIXES:
-  * 
+  * Classic confidence intervals for Skew() and Kurt() are now reported on
+    both sides.
   
 
 
